syntax = "proto3";

package walfie.gbf.raidfinder.protocol;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  import: "walfie.gbf.raidfinder.protocol.TypeMappers._"
  primitive_wrappers: true
  single_file: true
};

message RaidBoss {
  string name = 1;
  google.protobuf.StringValue image = 2;
  int64 lastSeen = 3 [(scalapb.field).type = "java.util.Date"];
  int32 level = 4;
  Language language = 5;
  google.protobuf.StringValue translatedName = 6;
};

enum Language {
  UNSPECIFIED = 0;
  JAPANESE = 1;
  ENGLISH = 2;
};

message TranslationData {
  string name = 1;
  int32 level = 2;
  Language language = 3;
  int64 imageHash = 4;
};

